fixed new UI spacing of the PassageOption

--- a/step-web/src/main/webapp/scss/arg_summary.scss
+++ b/step-web/src/main/webapp/scss/arg_summary.scss
@@ -48,6 +48,7 @@
 }
 
 .newArgSummary {
+	white-space:normal!important;
 	padding:6px 7px 5px 7px;
 	color:#498090;
 	font-size:14px;
